# testabc

./: CMakeLists.txt  Makefile
data/: lpr_stream.properties
src/apps/: CMakeLists.txt
src/apps/lpr_stream/: CMakeLists.txt  lpr_stream.cpp
src/common/: CMakeLists.txt  frame.cpp  frame.h  json.h  log.cpp  log.h  util.cpp  util.h
src/detection/: CMakeLists.txt  detection.cpp  detection.h  detection_dispatcher.cpp  detection_dispatcher.h  detection_worker.cpp  detection_worker.h
src/mqtt/: CMakeLists.txt  mqtt.cpp  mqtt.h  mqtt_baseapp.cc  mqtt_baseapp.cpp  mqtt_baseapp.h
src/parameter/: framefilterparameter.h  inputstreamparameter.h  licenseplateparameter.h  parameter.h  preselectionparameter.h  roimappingparameter.h  triggeraggregatorparameter.h  vehicledetectorparameter.h
src/pipeline/: CMakeLists.txt  node.cpp  node.h  pipeline.cpp  pipeline.h
src/pipeline/node/: framefilter.cpp  framefilter.h  inputstream.cpp  inputstream.h  licenseplate_detector.cpp  licenseplate_detector.h  preselection.cpp  preselection.h  roi_mapping.cpp  roi_mapping.h  trigger_aggregator.cpp  trigger_aggregator.h  vehicle_detector.cpp  vehicle_detector.h
src/stream/: CMakeLists.txt
src/trigger/: CMakeLists.txt  croncpp.h  lpdtrigger_generator.cpp  lpdtrigger_generator.h  schedulertrigger_generator.cpp  schedulertrigger_generator.h  trigger.cpp  trigger.h  triggermanager.cpp  triggermanager.h
